// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree view Breadcrumb component When Breadcrumb is mounted renders Breadcrumb button content correctly 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Cluster breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-clusterId"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cluster"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Namespace breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-namespace"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="namespace"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Pod breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-pod"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="kubernetesPod"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Container Image breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-containerImage"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="container"
            />
          </button>
        </span>
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            class="euiButtonEmpty emotion-EuiButtonEmpty"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                selected image
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree view Breadcrumb component When Breadcrumb is mounted should display cluster icon button when no cluster name is provided 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Cluster breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-clusterId"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cluster"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Namespace breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-namespace"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="namespace"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Pod breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-pod"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="kubernetesPod"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Container Image breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-containerImage"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="container"
            />
          </button>
        </span>
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            class="euiButtonEmpty emotion-EuiButtonEmpty"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                selected image
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree view Breadcrumb component When Breadcrumb is mounted should render breadcrumb icons 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Cluster breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-clusterId"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cluster"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Namespace breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-namespace"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="namespace"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Node breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-node"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="kubernetesNode"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Pod breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-pod"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="kubernetesPod"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Container Image breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-containerImage"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="container"
            />
          </button>
        </span>
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            class="euiButtonEmpty emotion-EuiButtonEmpty"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                selected image
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree view Breadcrumb component When Breadcrumb is mounted should render last  breadcrumb content only 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Cluster breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-clusterId"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cluster"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Node breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-node"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="kubernetesNode"
            />
          </button>
        </span>
        <span
          class="emotion-EuiIcon"
          data-euiicon-type="arrowRight"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Click Container Image breadcrumb"
            class="euiButtonIcon emotion-EuiButtonIcon"
            data-test-subj="kubernetesSecurityBreadcrumbIcon-containerImage"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="container"
            />
          </button>
        </span>
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            class="euiButtonEmpty emotion-EuiButtonEmpty"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                selected image
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;
